--- a/Aeropuerto/index.html
+++ b/Aeropuerto/index.html
@@ -12,9 +12,15 @@
         */
         html, body {
             height: 100%;
-            background-color: #1985D0;
-             background-image: url("resources/Img/FondoHome.png");
-        }/*
+            background-color: blue;
+     /*        background-image: url("resources/Img/giphy.gif");
+                 background-repeat: no-repeat; 
+                     background-attachment: fixed;
+    background-position: center; 
+
+  background-size: fit;
+*/
+        }
 
         #appLoadingIndicator {
             position: absolute;
@@ -54,6 +60,24 @@
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-57448437-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script type="text/javascript" src="app/utils/GALocalStorage.js"></script>
+<script>
+    ga_storage._setAccount('UA-57448437-1'); //Replace with your own
+    ga_storage._trackPageview('/index.html');
+
+</script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js"></script>
 </head>
 <body>
