--- a/Aeropuerto/phonegap/platforms/ios/www/index.html
+++ b/Aeropuerto/phonegap/platforms/ios/www/index.html
@@ -12,7 +12,14 @@
         */
         html, body {
             height: 100%;
-            background-color: #1985D0
+            background-color: blue;
+     /*        background-image: url("resources/Img/giphy.gif");
+                 background-repeat: no-repeat; 
+                     background-attachment: fixed;
+    background-position: center; 
+
+  background-size: fit;
+*/
         }
 
         #appLoadingIndicator {
@@ -48,6 +55,8 @@
             100% {
                 opacity: 0.8
             }
+
+            */
         }
     </style>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
